fixed issue with header positions on ios

--- a/Desktop/battleApp/www/css/style.css
+++ b/Desktop/battleApp/www/css/style.css
@@ -46,7 +46,7 @@ h1 {
 
 #header {
 	background-color: #6FCEFB;
-	height: 40px;
+	/*height: 40px;*/
 }
 
 #subheader {
